--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,100 +1,131 @@
+      <link rel="stylesheet" href="../../../assets/css/animations.css">
   <header id="home" class="welcome-area">
         <div class="header-top-area">
             <div class="container">
-           
+    
                 <div class="row">
-                 
-                    <div class="col-md-3 home1 revslider">
-                        <!-- START LOGO DESIGN AREA -->
-                        <div class="logo">
+                   <div class="col-md-4  ">
+                      
+                        <div class="logo" style="vertical-align:middle;">
                             <a routerLink="">
                                 <img alt="image" src="assets/images/white-logo.png" >
                             </a>
+                            <a href="#myCar" class="popup-with-zoom-anim" id="opencar" style="color:#fff;">
+                              <mat-icon matBadge="{{this._car.size}}" *ngIf="this._car.size>0 " matBadgeColor="warn" style="vertical-align:middle;">shopping_cart</mat-icon>
+                            </a>
                         </div>
                        
-                        <!-- END LOGO DESIGN AREA -->
                     </div>
                     
-                    <div class="col-md-9">
-                        <!-- Top Bar -->
+                    <div class="col-md-8">
+                    
                         <div class="header_top">
                             <div class="col-md-12">
-                               <!-- <div class="pull-left">
-                                    <span><i class="flaticon-phone-receiver"></i></span>
-                                    <span><i class="flaticon-send"></i></span>
-                                </div> -->
+                               
                                 <div class="pull-right">
                                     <a href="#">Login /</a><a href="https://www.thetixsapp.com" target="_blank">Register</a>
+
+                                   
                                 </div> 
                             </div>
                         </div>
                         <div class="clearfix"></div>
-                        <!-- START MENU DESIGN AREA -->
+                      
                         <div class="mainmenu">
                             <div class="navbar navbar-nobg">
-                                <div class="navbar-header">
-                                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                        <span class="sr-only">Toggle navigation</span>
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                    </button>
-                                </div>
-                                <div class="navbar-collapse collapse no-padding">
-                                    <ul class="nav navbar-nav navbar-left">
-                               
-                                          <li  class="dropdown "><a   style="font-family:moderna;" routerLink="about">About</a></li>
-                                      <!--   <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle"  style="font-family:moderna;">Join<span class="caret"></span></a>
-                                            <ul class="dropdown-menu">
-                                                <li><a routerLink="collage">Customer</a></li>
-                                                <li><a routerLink="">Affiliate</a></li>
-                                                <li><a href="#">Partner</a></li>
-                                               
-                                            </ul>
-                                        </li> -->
-                                          <li  class="dropdown "><a  style="font-family:moderna;" routerLink="contact" >Contact</a></li>
-                                   
-                                        
-                                    </ul>
-                                    <ul class="nav navbar-nav navbar-right popup">
-                                        <li style="padding-top:30px;">
-                                            <a href="#myCar" class="popup-with-zoom-anim" id="opencar">
-                                        
-                                              <mat-icon matBadge="{{this._car.size}}" matBadgeColor="warn">shopping_cart</mat-icon>
-                                             <!--    <i class="fa fa-search">
-                                                </i> -->
-                                            </a>
-                                        </li>
+                            <div class="navbar-header">
+                              <ul>
+                                      
 
                                         <span id="myOverlay" class="overlay overlay_home1">
-                                        
-                                          <span class="closebtn" id="btnclose" title="Close Overlay">x</span>
+                                       
+                                          <span class="closebtn" id="btnclose" title="Close Overlay" style="z-index:9999999;">x</span>
                                         <span class="overlay-content">
-                                        <div >
-                                            <a >
-                                                <img style="top:12px;left:-35px;" alt="image" src="assets/images/flogo.png" >
-                                            </a>
 
-                                        </div>
-                                             <div > 
+                                    
 
+                                             <div class="row" >
+                                             <!-- con espacio                                         -->
+                                             <!-- <div class="row" style="margin-top:100px;">  -->
+                              <div class="col-md-8 order-md-1">
+                              <div>
+                              <div class="logo">
+                            <a routerLink="">
+                                <img alt="image" src="assets/images/white-logo.png" >
+                            </a>
+                            
+                        </div>
+                                <h1 style="color:white; ">Cart summary</h1>
+                              </div>
+<div  style="color:black;text-align:left;border-radius:12px;" >
+  <ul class="list-group borderless col-md-12 offset-md-2" style="background-color:white;box-shadow:5px 0px 17px 5px rgba(44, 50, 50, 4.14);padding-left:12px;border-radius:12px;">
+  <li class="list-group-item borderless" *ngFor="let product of _car.car; let i = index " style="padding-left:12px;" >
+    <div style="min-height:35px;">
+    
+      <!-- <button type="button" class="rbutton"> -->
+      <i class="fa fa-trash pull-right" style="font-color:red;color:red; font-size:31px;"  (click)="saludo()" ></i>
+      <!-- </button> -->
 
+      <h4 > {{product.productName}}</h4>    
+    </div>
+    <ul class="list-group">
+      <li class="list-group-item borderless" *ngFor="let item of product.itemsPrices; let j = index" >
+        {{item.label}} Quantity: {{_car.car[i].quan[j]}}
+      </li>  
+    </ul>
 
-<mat-list role="list" style="text-align:left;">
-  <mat-list-item role="listitem"  *ngFor="let product of _car.car; let i = index ">
-    <mat-icon mat-list-icon>folder</mat-icon>
-    <h4 mat-line> {{product.productName}}</h4>
-    <p mat-line>  <span>
-       <mat-divider></mat-divider>
-      <mat-list role="list">
-      <mat-list-item role="listitem"  *ngFor="let item of product.itemsPrices; let j = index">{{item.label}} Quantity: {{_car.car[i].quan[j]}}
-      </mat-list-item>
-      </mat-list>
-  </span>
-  </p>
-  </mat-list-item> 
- </mat-list>
+  </li>
  
+</ul>
+</div>                              
+
+</div>
+<div class="col-md-4 order-md-2 mb-4">
+
+</div>
+<div class="checkout" style="display: block;box-shadow:5px 0px 17px 5px rgba(44, 50, 50, 2.14);">
+    <span class="fa fa-check puls"></span>
+</div>
+<!--   <div class="row">
+    <div class="col-md-6">
+     <div class="icon">
+    <mat-icon [inline]="true">shopping_cart</mat-icon>
+  </div>
+      <img  alt="image" src="assets/images/flogo.png" >
+    </div>
+     <div class="col-md-6">
+     <span style="font-family:moderna;">
+     Your are {{this._car.size}} tixs on car 
+     </span>
+    <button type="button" class="btn btn-success">checkout!</button>
+    </div>
+  </div>
+ -->
+
+
+
+
+
+ <!--  <mat-list  role="list"  >
+    <mat-list-item role="listitem"  *ngFor="let product of _car.car; let i = index " >
+        <img matListAvatar src="{{product.image}}" alt="...">
+      <h4 mat-line> {{product.productName}} . . .</h4>
+      <p mat-line>  
+        <span>
+          <mat-divider></mat-divider>
+          <mat-list class="my-list-1" role="list">
+            <mat-list-item  role="listitem"  class="mat-list-item2" *ngFor="let item of product.itemsPrices; let j = index">{{item.label}} Quantity: {{_car.car[i].quan[j]}}
+            </mat-list-item>
+         
+
+          </mat-list>
+
+        </span>
+      </p>
+    </mat-list-item> 
+   </mat-list> -->
+ 
+
                                                  
 
 
@@ -141,6 +172,27 @@
                                           </span>
                                         </span>
                                     </ul>
+                            </div>
+                                <div class="navbar-header">
+                                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+
+                                        <span class="sr-only"></span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                    </button>
+                                </div>
+                                <div class="navbar-collapse collapse no-padding">
+
+                                    <ul class="nav navbar-nav navbar-left">
+                               
+                                          <li  class="dropdown "><a   style="font-family:moderna;" routerLink="about">About</a></li>
+                                     
+                                          <li  class="dropdown "><a  style="font-family:moderna;" routerLink="contact" >Contact</a></li>
+                                   
+                                        
+                                    </ul>
+                                    
                                 </div>                            
                             </div>
                         </div>
