--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -141,14 +141,15 @@ a.button:hover {
     color: #fff;
 }
 .rbutton {
-    background: #17a9a8 none repeat scroll 0 0;
+    background: #cc0d00 none repeat scroll 0 0;
     color: #fff;
-    padding: 10px 20px;
+    /*padding: 0px 0px;*/
     right: 0;
     text-align: center;
     text-transform: uppercase;
     top: 0;
     border: 0;
+    font-size: 10px;
     border-radius: 20px;
 }
 
@@ -3066,7 +3067,7 @@ input[type="date"]::-webkit-inner-spin-button {
 
 .flight-details a.rbutton {
     color: #fff;
-    padding: 5px 20px;
+    padding: 5px 0px;
     border-radius: 40px;
 }
 .flight-details a.magin_left{
@@ -4494,7 +4495,10 @@ p.content {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: white;
+  background-color: #323559;
+  /*background-color: #74d4d3;*/
+  overflow-y: scroll;
+  ::-webkit-scrollbar-track {background: transparent};
 
   /*background-color: rgba(0,0,0, 0.9);  Black with a little bit see-through */
 }
@@ -14851,24 +14855,65 @@ span.coln {
   margin-top: 30px;
   margin: auto;
   display: inline-block;
+  /*overflow-y: scroll; */
+   ::-webkit-scrollbar-track {background: transparent};
+
 }
 
+.checkout{
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    font-size: 56px;
+    color: #fff;
+    text-align: center;
+    position: fixed;
+    top: 80%;
+    right: 30px;
+    /*line-height: 40px;*/
+    cursor: pointer;
+    display: none;
+    z-index: 999999;
+    background: #17a9a8;
+}
 
+/*.checkout{
+border-radius: 5%;
+height: 80px;
+width: 80px;
+font-weight: 600;
+font-size: 28px;
+color:#fff;
+text-align: center;
+position: fixed;
+top: 130px;
+left: 30px;
+line-height: 40px;
+cursor: pointer;    
+z-index:9999999;
+background:#17a9a8; 
+
+}
+*/
 /* Close button */
 .overlay .closebtn {
-  position: absolute;
-  /*top: 20px;
+    position: fixed;
+  /*position: absolute;*/
+  top: 0%;
   right: 45px;
-  font-size: 60px;*/
-  top: 12px;
+  font-size: 60px;
+/*  top: 12px;
   right: 50px;
-  font-size: 40px;
+  font-size: 40px;*/
   cursor: pointer;
-  color: #323559;
+  color:white;
+  /*color: #323559;*/
+  /*color oscuro btn close*/
 }
 
 .overlay .closebtn:hover {
   color: #17a9a8;
+
 }
 
 /* Style the search field */
@@ -14899,8 +14944,8 @@ span.coln {
 /* Style the submit button */
 .overlay button {
   float: left;
-  width: 20%;
-  padding: 10px;
+  /*width: 20%;*/
+  /*padding: 10px;*/
   font-size: 17px;
   border: none;
   cursor: pointer;
